src/parser.output
Nonterminals useless in grammar

    unary_operator
    labeled_statement_list


Terminals unused in grammar

    TYPE_NAME
    HELLO_WORLD
    "{"
    "}"


Rules useless in grammar

  205 labeled_statement_list: "{" labeled_statement_list "}"
  206                       | labeled_statement_list labeled_statement
  207                       | labeled_statement


State 341 conflicts: 1 shift/reduce


Grammar

    0 $accept: ROOT $end

    1 ROOT: translation_unit

    2 translation_unit: external_declaration
    3                 | translation_unit external_declaration

    4 external_declaration: function_definition
    5                     | declaration

    6 type_specifier: VOID
    7               | CHAR
    8               | SHORT
    9               | INT
   10               | LONG
   11               | FLOAT
   12               | DOUBLE
   13               | SIGNED
   14               | UNSIGNED
   15               | struct_or_union_specifier
   16               | enum_specifier

   17 storage_class_specifier: TYPEDEF
   18                        | EXTERN
   19                        | STATIC
   20                        | AUTO
   21                        | REGISTER

   22 type_qualifier: CONST
   23               | VOLATILE

   24 declaration_specifiers: storage_class_specifier
   25                       | storage_class_specifier declaration_specifiers
   26                       | type_specifier
   27                       | type_specifier declaration_specifiers

   28 direct_declarator: IDENTIFIER
   29                  | '(' declarator ')'
   30                  | direct_declarator '[' constant_expression ']'
   31                  | direct_declarator '[' ']'
   32                  | direct_declarator '(' parameter_type_list ')'
   33                  | direct_declarator '(' identifier_list ')'
   34                  | direct_declarator '(' ')'

   35 declarator: pointer direct_declarator
   36           | direct_declarator

   37 type_name: specifier_qualifier_list
   38          | specifier_qualifier_list abstract_declarator

   39 declaration: declaration_specifiers ';'
   40            | declaration_specifiers init_declarator_list ';'

   41 init_declarator: declarator
   42                | declarator '=' initializer

   43 initializer: assignment_expression
   44            | '{' initializer_list '}'
   45            | '{' initializer_list ',' '}'

   46 function_definition: declarator compound_statement
   47                    | declaration_specifiers declarator compound_statement

   48 parameter_declaration: declaration_specifiers declarator
   49                      | declaration_specifiers abstract_declarator
   50                      | declaration_specifiers

   51 enum_specifier: ENUM '{' enumerator_list '}'
   52               | ENUM IDENTIFIER '{' enumerator_list '}'
   53               | ENUM IDENTIFIER

   54 enumerator: IDENTIFIER
   55           | IDENTIFIER '=' constant_expression

   56 pointer: '*'
   57        | '*' type_qualifier_list
   58        | '*' pointer
   59        | '*' type_qualifier_list pointer

   60 abstract_declarator: pointer
   61                    | direct_abstract_declarator
   62                    | pointer direct_abstract_declarator

   63 direct_abstract_declarator: '(' abstract_declarator ')'
   64                           | '[' ']'
   65                           | '[' constant_expression ']'
   66                           | direct_abstract_declarator '[' ']'
   67                           | direct_abstract_declarator '[' constant_expression ']'
   68                           | '(' ')'
   69                           | '(' parameter_type_list ')'
   70                           | direct_abstract_declarator '(' ')'
   71                           | direct_abstract_declarator '(' parameter_type_list ')'

   72 struct_or_union_specifier: struct_or_union IDENTIFIER '{' struct_declaration_list '}'
   73                          | struct_or_union '{' struct_declaration_list '}'
   74                          | struct_or_union IDENTIFIER

   75 struct_or_union: STRUCT
   76                | UNION

   77 struct_declaration_list: struct_declaration
   78                        | struct_declaration_list struct_declaration

   79 struct_declaration: specifier_qualifier_list struct_declarator_list ';'

   80 struct_declarator: declarator
   81                  | ':' constant_expression
   82                  | declarator ':' constant_expression

   83 specifier_qualifier_list: specifier_qualifier_list type_specifier
   84                         | type_specifier
   85                         | specifier_qualifier_list type_qualifier
   86                         | type_qualifier

   87 struct_declarator_list: struct_declarator
   88                       | struct_declarator_list ',' struct_declarator

   89 init_declarator_list: init_declarator
   90                     | init_declarator_list ',' init_declarator

   91 enumerator_list: enumerator
   92                | enumerator_list ',' enumerator

   93 initializer_list: initializer
   94                 | initializer_list ',' initializer

   95 identifier_list: IDENTIFIER
   96                | identifier_list ',' IDENTIFIER

   97 type_qualifier_list: type_qualifier
   98                    | type_qualifier_list type_qualifier

   99 parameter_type_list: parameter_list
  100                    | parameter_list ',' ELLIPSIS

  101 parameter_list: parameter_declaration
  102               | parameter_list ',' parameter_declaration

  103 argument_expression_list: assignment_expression
  104                         | argument_expression_list ',' assignment_expression

  105 declaration_or_statement: declaration
  106                         | statement

  107 declaration_or_statement_list: declaration_or_statement
  108                              | declaration_or_statement_list declaration_or_statement

  109 statement: labeled_statement
  110          | compound_statement
  111          | expression_statement
  112          | selection_statement
  113          | iteration_statement
  114          | jump_statement

  115 labeled_statement: IDENTIFIER ':' statement
  116                  | CASE constant_expression ':' statement
  117                  | DEFAULT ':' statement

  118 expression_statement: ';'
  119                     | expression ';'

  120 selection_statement: IF '(' expression ')' statement
  121                    | IF '(' expression ')' statement ELSE statement
  122                    | SWITCH '(' expression ')' statement

  123 iteration_statement: WHILE '(' expression ')' statement
  124                    | DO statement WHILE '(' expression ')' ';'
  125                    | FOR '(' expression_statement expression_statement ')' statement
  126                    | FOR '(' expression_statement expression_statement expression ')' statement

  127 jump_statement: GOTO IDENTIFIER ';'
  128               | CONTINUE ';'
  129               | BREAK ';'
  130               | RETURN ';'
  131               | RETURN expression ';'

  132 compound_statement: '{' '}'
  133                   | '{' declaration_or_statement_list '}'

  134 primary_expression: IDENTIFIER
  135                   | CONSTANT_INT
  136                   | CONSTANT_FLOAT
  137                   | STRING_LITERAL
  138                   | '(' expression ')'

  139 postfix_expression: primary_expression
  140                   | postfix_expression '[' expression ']'
  141                   | postfix_expression '(' ')'
  142                   | postfix_expression '(' argument_expression_list ')'
  143                   | postfix_expression '.' IDENTIFIER
  144                   | postfix_expression PTR_OP IDENTIFIER
  145                   | postfix_expression INC_OP
  146                   | postfix_expression DEC_OP

  147 unary_expression: postfix_expression
  148                 | INC_OP unary_expression
  149                 | DEC_OP unary_expression
  150                 | '&' cast_expression
  151                 | '*' cast_expression
  152                 | '+' cast_expression
  153                 | '-' cast_expression
  154                 | '~' cast_expression
  155                 | '!' cast_expression
  156                 | SIZEOF unary_expression
  157                 | SIZEOF '(' type_name ')'

  158 cast_expression: unary_expression
  159                | '(' type_name ')' cast_expression

  160 multiplicative_expression: cast_expression
  161                          | multiplicative_expression '*' cast_expression
  162                          | multiplicative_expression '/' cast_expression
  163                          | multiplicative_expression '%' cast_expression

  164 additive_expression: multiplicative_expression
  165                    | additive_expression '+' multiplicative_expression
  166                    | additive_expression '-' multiplicative_expression

  167 shift_expression: additive_expression
  168                 | shift_expression LEFT_OP additive_expression
  169                 | shift_expression RIGHT_OP additive_expression

  170 relational_expression: shift_expression
  171                      | relational_expression '<' shift_expression
  172                      | relational_expression '>' shift_expression
  173                      | relational_expression LE_OP shift_expression
  174                      | relational_expression GE_OP shift_expression

  175 equality_expression: relational_expression
  176                    | equality_expression EQ_OP relational_expression
  177                    | equality_expression NE_OP relational_expression

  178 and_expression: equality_expression
  179               | and_expression '&' equality_expression

  180 exclusive_or_expression: and_expression
  181                        | exclusive_or_expression '^' and_expression

  182 inclusive_or_expression: exclusive_or_expression
  183                        | inclusive_or_expression '|' exclusive_or_expression

  184 logical_and_expression: inclusive_or_expression
  185                       | logical_and_expression AND_OP inclusive_or_expression

  186 logical_or_expression: logical_and_expression
  187                      | logical_or_expression OR_OP logical_and_expression

  188 conditional_expression: logical_or_expression
  189                       | logical_or_expression '?' expression ':' conditional_expression

  190 assignment_expression: conditional_expression
  191                      | unary_expression '=' assignment_expression
  192                      | unary_expression MUL_ASSIGN assignment_expression
  193                      | unary_expression DIV_ASSIGN assignment_expression
  194                      | unary_expression MOD_ASSIGN assignment_expression
  195                      | unary_expression ADD_ASSIGN assignment_expression
  196                      | unary_expression SUB_ASSIGN assignment_expression
  197                      | unary_expression LEFT_ASSIGN assignment_expression
  198                      | unary_expression RIGHT_ASSIGN assignment_expression
  199                      | unary_expression AND_ASSIGN assignment_expression
  200                      | unary_expression XOR_ASSIGN assignment_expression
  201                      | unary_expression OR_ASSIGN assignment_expression

  202 expression: assignment_expression
  203           | expression ',' assignment_expression

  204 constant_expression: conditional_expression


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 155
    '%' (37) 163
    '&' (38) 150 179
    '(' (40) 29 32 33 34 63 68 69 70 71 120 121 122 123 124 125 126 138 141 142 157 159
    ')' (41) 29 32 33 34 63 68 69 70 71 120 121 122 123 124 125 126 138 141 142 157 159
    '*' (42) 56 57 58 59 151 161
    '+' (43) 152 165
    ',' (44) 45 88 90 92 94 96 100 102 104 203
    '-' (45) 153 166
    '.' (46) 143
    '/' (47) 162
    ':' (58) 81 82 115 116 117 189
    ';' (59) 39 40 79 118 119 124 127 128 129 130 131
    '<' (60) 171
    '=' (61) 42 55 191
    '>' (62) 172
    '?' (63) 189
    '[' (91) 30 31 64 65 66 67 140
    ']' (93) 30 31 64 65 66 67 140
    '^' (94) 181
    '{' (123) 44 45 51 52 72 73 132 133
    '|' (124) 183
    '}' (125) 44 45 51 52 72 73 132 133
    '~' (126) 154
    error (256)
    CONSTANT_INT <ival> (258) 135
    CONSTANT_FLOAT <dval> (259) 136
    IDENTIFIER <string> (260) 28 52 53 54 55 72 74 95 96 115 127 134 143 144
    STRING_LITERAL <string> (261) 137
    SIZEOF (262) 156 157
    PTR_OP (263) 144
    INC_OP (264) 145 148
    DEC_OP (265) 146 149
    LEFT_OP (266) 168
    RIGHT_OP (267) 169
    LE_OP (268) 173
    GE_OP (269) 174
    EQ_OP (270) 176
    NE_OP (271) 177
    AND_OP (272) 185
    OR_OP (273) 187
    MUL_ASSIGN (274) 192
    DIV_ASSIGN (275) 193
    MOD_ASSIGN (276) 194
    ADD_ASSIGN (277) 195
    SUB_ASSIGN (278) 196
    LEFT_ASSIGN (279) 197
    RIGHT_ASSIGN (280) 198
    AND_ASSIGN (281) 199
    XOR_ASSIGN (282) 200
    OR_ASSIGN (283) 201
    TYPE_NAME (284)
    TYPEDEF (285) 17
    EXTERN (286) 18
    STATIC (287) 19
    AUTO (288) 20
    REGISTER (289) 21
    CHAR (290) 7
    SHORT (291) 8
    INT (292) 9
    LONG (293) 10
    SIGNED (294) 13
    UNSIGNED (295) 14
    FLOAT (296) 11
    DOUBLE (297) 12
    CONST (298) 22
    VOLATILE (299) 23
    VOID (300) 6
    STRUCT (301) 75
    UNION (302) 76
    ENUM (303) 51 52 53
    ELLIPSIS (304) 100
    CASE (305) 116
    DEFAULT (306) 117
    IF (307) 120 121
    ELSE (308) 121
    SWITCH (309) 122
    WHILE (310) 123 124
    DO (311) 124
    FOR (312) 125 126
    GOTO (313) 127
    CONTINUE (314) 128
    BREAK (315) 129
    RETURN (316) 130 131
    HELLO_WORLD (317)
    "{" (318)
    "}" (319)


Nonterminals, with rules where they appear

    $accept (89)
        on left: 0
    ROOT <tree> (90)
        on left: 1
        on right: 0
    translation_unit <list> (91)
        on left: 2 3
        on right: 1 3
    external_declaration <tree> (92)
        on left: 4 5
        on right: 2 3
    type_specifier <tree> (93)
        on left: 6 7 8 9 10 11 12 13 14 15 16
        on right: 26 27 83 84
    storage_class_specifier <tree> (94)
        on left: 17 18 19 20 21
        on right: 24 25
    type_qualifier <tree> (95)
        on left: 22 23
        on right: 85 86 97 98
    declaration_specifiers <tree> (96)
        on left: 24 25 26 27
        on right: 25 27 39 40 47 48 49 50
    direct_declarator <tree> (97)
        on left: 28 29 30 31 32 33 34
        on right: 30 31 32 33 34 35 36
    declarator <tree> (98)
        on left: 35 36
        on right: 29 41 42 46 47 48 80 82
    type_name <tree> (99)
        on left: 37 38
        on right: 157 159
    declaration <tree> (100)
        on left: 39 40
        on right: 5 105
    init_declarator <tree> (101)
        on left: 41 42
        on right: 89 90
    initializer <tree> (102)
        on left: 43 44 45
        on right: 42 93 94
    function_definition <tree> (103)
        on left: 46 47
        on right: 4
    parameter_declaration <tree> (104)
        on left: 48 49 50
        on right: 101 102
    enum_specifier <tree> (105)
        on left: 51 52 53
        on right: 16
    enumerator <tree> (106)
        on left: 54 55
        on right: 91 92
    pointer (107)
        on left: 56 57 58 59
        on right: 35 58 59 60 62
    abstract_declarator <tree> (108)
        on left: 60 61 62
        on right: 38 49 63
    direct_abstract_declarator <tree> (109)
        on left: 63 64 65 66 67 68 69 70 71
        on right: 61 62 66 67 70 71
    struct_or_union_specifier <tree> (110)
        on left: 72 73 74
        on right: 15
    struct_or_union <tree> (111)
        on left: 75 76
        on right: 72 73 74
    struct_declaration_list <list> (112)
        on left: 77 78
        on right: 72 73 78
    struct_declaration <tree> (113)
        on left: 79
        on right: 77 78
    struct_declarator <tree> (114)
        on left: 80 81 82
        on right: 87 88
    specifier_qualifier_list <list> (115)
        on left: 83 84 85 86
        on right: 37 38 79 83 85
    struct_declarator_list <list> (116)
        on left: 87 88
        on right: 79 88
    init_declarator_list <list> (117)
        on left: 89 90
        on right: 40 90
    enumerator_list <list> (118)
        on left: 91 92
        on right: 51 52 92
    initializer_list <list> (119)
        on left: 93 94
        on right: 44 45 94
    identifier_list <list> (120)
        on left: 95 96
        on right: 33 96
    type_qualifier_list (121)
        on left: 97 98
        on right: 57 59 98
    parameter_type_list <list> (122)
        on left: 99 100
        on right: 32 69 71
    parameter_list <list> (123)
        on left: 101 102
        on right: 99 100 102
    argument_expression_list <list> (124)
        on left: 103 104
        on right: 104 142
    declaration_or_statement <tree> (125)
        on left: 105 106
        on right: 107 108
    declaration_or_statement_list <list> (126)
        on left: 107 108
        on right: 108 133
    statement <tree> (127)
        on left: 109 110 111 112 113 114
        on right: 106 115 116 117 120 121 122 123 124 125 126
    labeled_statement <tree> (128)
        on left: 115 116 117
        on right: 109
    expression_statement <tree> (129)
        on left: 118 119
        on right: 111 125 126
    selection_statement <tree> (130)
        on left: 120 121 122
        on right: 112
    iteration_statement <tree> (131)
        on left: 123 124 125 126
        on right: 113
    jump_statement <tree> (132)
        on left: 127 128 129 130 131
        on right: 114
    compound_statement <tree> (133)
        on left: 132 133
        on right: 46 47 110
    primary_expression <tree> (134)
        on left: 134 135 136 137 138
        on right: 139
    postfix_expression <tree> (135)
        on left: 139 140 141 142 143 144 145 146
        on right: 140 141 142 143 144 145 146 147
    unary_expression <tree> (136)
        on left: 147 148 149 150 151 152 153 154 155 156 157
        on right: 148 149 156 158 191 192 193 194 195 196 197 198 199 200 201
    cast_expression <tree> (137)
        on left: 158 159
        on right: 150 151 152 153 154 155 159 160 161 162 163
    multiplicative_expression <tree> (138)
        on left: 160 161 162 163
        on right: 161 162 163 164 165 166
    additive_expression <tree> (139)
        on left: 164 165 166
        on right: 165 166 167 168 169
    shift_expression <tree> (140)
        on left: 167 168 169
        on right: 168 169 170 171 172 173 174
    relational_expression <tree> (141)
        on left: 170 171 172 173 174
        on right: 171 172 173 174 175 176 177
    equality_expression <tree> (142)
        on left: 175 176 177
        on right: 176 177 178 179
    and_expression <tree> (143)
        on left: 178 179
        on right: 179 180 181
    exclusive_or_expression <tree> (144)
        on left: 180 181
        on right: 181 182 183
    inclusive_or_expression <tree> (145)
        on left: 182 183
        on right: 183 184 185
    logical_and_expression <tree> (146)
        on left: 184 185
        on right: 185 186 187
    logical_or_expression <tree> (147)
        on left: 186 187
        on right: 187 188 189
    conditional_expression <tree> (148)
        on left: 188 189
        on right: 189 190 204
    assignment_expression <tree> (149)
        on left: 190 191 192 193 194 195 196 197 198 199 200 201
        on right: 43 103 104 191 192 193 194 195 196 197 198 199 200 201 202 203
    expression <tree> (150)
        on left: 202 203
        on right: 119 120 121 122 123 124 126 131 138 140 189 203
    constant_expression <tree> (151)
        on left: 204
        on right: 30 55 65 67 81 82 116


State 0

    0 $accept: . ROOT $end

    IDENTIFIER  shift, and go to state 1
    TYPEDEF     shift, and go to state 2
    EXTERN      shift, and go to state 3
    STATIC      shift, and go to state 4
    AUTO        shift, and go to state 5
    REGISTER    shift, and go to state 6
    CHAR        shift, and go to state 7
    SHORT       shift, and go to state 8
    INT         shift, and go to state 9
    LONG        shift, and go to state 10
    SIGNED      shift, and go to state 11
    UNSIGNED    shift, and go to state 12
    FLOAT       shift, and go to state 13
    DOUBLE      shift, and go to state 14
    VOID        shift, and go to state 15
    STRUCT      shift, and go to state 16
    UNION       shift, and go to state 17
    ENUM        shift, and go to state 18
    '('         shift, and go to state 19
    '*'         shift, and go to state 20

    ROOT                       go to state 21
    translation_unit           go to state 22
    external_declaration       go to state 23
    type_specifier             go to state 24
    storage_class_specifier    go to state 25
    declaration_specifiers     go to state 26
    direct_declarator          go to state 27
    declarator                 go to state 28
    declaration                go to state 29
    function_definition        go to state 30
    enum_specifier             go to state 31
    pointer                    go to state 32
    struct_or_union_specifier  go to state 33
    struct_or_union            go to state 34


State 1

   28 direct_declarator: IDENTIFIER .

    $default  reduce using rule 28 (direct_declarator)


State 2

   17 storage_class_specifier: TYPEDEF .

    $default  reduce using rule 17 (storage_class_specifier)


State 3

   18 storage_class_specifier: EXTERN .

    $default  reduce using rule 18 (storage_class_specifier)


State 4

   19 storage_class_specifier: STATIC .

    $default  reduce using rule 19 (storage_class_specifier)


State 5

   20 storage_class_specifier: AUTO .

    $default  reduce using rule 20 (storage_class_specifier)


State 6

   21 storage_class_specifier: REGISTER .

    $default  reduce using rule 21 (storage_class_specifier)


State 7

    7 type_specifier: CHAR .

    $default  reduce using rule 7 (type_specifier)


State 8

    8 type_specifier: SHORT .

    $default  reduce using rule 8 (type_specifier)


State 9

    9 type_specifier: INT .

    $default  reduce using rule 9 (type_specifier)


State 10

   10 type_specifier: LONG .

    $default  reduce using rule 10 (type_specifier)


State 11

   13 type_specifier: SIGNED .

    $default  reduce using rule 13 (type_specifier)


State 12

   14 type_specifier: UNSIGNED .

    $default  reduce using rule 14 (type_specifier)


State 13

   11 type_specifier: FLOAT .

    $default  reduce using rule 11 (type_specifier)


State 14

   12 type_specifier: DOUBLE .

    $default  reduce using rule 12 (type_specifier)


State 15

    6 type_specifier: VOID .

    $default  reduce using rule 6 (type_specifier)


State 16

   75 struct_or_union: STRUCT .

    $default  reduce using rule 75 (struct_or_union)


State 17

   76 struct_or_union: UNION .

    $default  reduce using rule 76 (struct_or_union)


State 18

   51 enum_specifier: ENUM . '{' enumerator_list '}'
   52               | ENUM . IDENTIFIER '{' enumerator_list '}'
   53               | ENUM . IDENTIFIER

    IDENTIFIER  shift, and go to state 35
    '{'         shift, and go to state 36


State 19

   29 direct_declarator: '(' . declarator ')'

    IDENTIFIER  shift, and go to state 1
    '('         shift, and go to state 19
    '*'         shift, and go to state 20

    direct_declarator  go to state 27
    declarator         go to state 37
    pointer            go to state 32


State 20

   56 pointer: '*' .
   57        | '*' . type_qualifier_list
   58        | '*' . pointer
   59        | '*' . type_qualifier_list pointer

    CONST     shift, and go to state 38
    VOLATILE  shift, and go to state 39
    '*'       shift, and go to state 20

    $default  reduce using rule 56 (pointer)

    type_qualifier       go to state 40
    pointer              go to state 41
    type_qualifier_list  go to state 42


State 21

    0 $accept: ROOT . $end

    $end  shift, and go to state 43


State 22

    1 ROOT: translation_unit .
    3 translation_unit: translation_unit . external_declaration

    IDENTIFIER  shift, and go to state 1
    TYPEDEF     shift, and go to state 2
    EXTERN      shift, and go to state 3
    STATIC      shift, and go to state 4
    AUTO        shift, and go to state 5
    REGISTER    shift, and go to state 6
    CHAR        shift, and go to state 7
    SHORT       shift, and go to state 8
    INT         shift, and go to state 9
    LONG        shift, and go to state 10
    SIGNED      shift, and go to state 11
    UNSIGNED    shift, and go to state 12
    FLOAT       shift, and go to state 13
    DOUBLE      shift, and go to state 14
    VOID        shift, and go to state 15
    STRUCT      shift, and go to state 16
    UNION       shift, and go to state 17
    ENUM        shift, and go to state 18
    '('         shift, and go to state 19
    '*'         shift, and go to state 20

    $default  reduce using rule 1 (ROOT)

    external_declaration       go to state 44
    type_specifier             go to state 24
    storage_class_specifier    go to state 25
    declaration_specifiers     go to state 26
    direct_declarator          go to state 27
    declarator                 go to state 28
    declaration                go to state 29
    function_definition        go to state 30
    enum_specifier             go to state 31
    pointer                    go to state 32
    struct_or_union_specifier  go to state 33
    struct_or_union            go to state 34


State 23

    2 translation_unit: external_declaration .

    $default  reduce using rule 2 (translation_unit)


State 24

   26 declaration_specifiers: type_specifier .
   27                       | type_specifier . declaration_specifiers

    TYPEDEF   shift, and go to state 2
    EXTERN    shift, and go to state 3
    STATIC    shift, and go to state 4
    AUTO      shift, and go to state 5
    REGISTER  shift, and go to state 6
    CHAR      shift, and go to state 7
    SHORT     shift, and go to state 8
    INT       shift, and go to state 9
    LONG      shift, and go to state 10
    SIGNED    shift, and go to state 11
    UNSIGNED  shift, and go to state 12
    FLOAT     shift, and go to state 13
    DOUBLE    shift, and go to state 14
    VOID      shift, and go to state 15
    STRUCT    shift, and go to state 16
    UNION     shift, and go to state 17
    ENUM      shift, and go to state 18

    $default  reduce using rule 26 (declaration_specifiers)

    type_specifier             go to state 24
    storage_class_specifier    go to state 25
    declaration_specifiers     go to state 45
    enum_specifier             go to state 31
    struct_or_union_specifier  go to state 33
    struct_or_union            go to state 34


State 25

   24 declaration_specifiers: storage_class_specifier .
   25                       | storage_class_specifier . declaration_specifiers

    TYPEDEF   shift, and go to state 2
    EXTERN    shift, and go to state 3
    STATIC    shift, and go to state 4
    AUTO      shift, and go to state 5
    REGISTER  shift, and go to state 6
    CHAR      shift, and go to state 7
    SHORT     shift, and go to state 8
    INT       shift, and go to state 9
    LONG      shift, and go to state 10
    SIGNED    shift, and go to state 11
    UNSIGNED  shift, and go to state 12
    FLOAT     shift, and go to state 13
    DOUBLE    shift, and go to state 14
    VOID      shift, and go to state 15
    STRUCT    shift, and go to state 16
    UNION     shift, and go to state 17
    ENUM      shift, and go to state 18

    $default  reduce using rule 24 (declaration_specifiers)

    type_specifier             go to state 24
    storage_class_specifier    go to state 25
    declaration_specifiers     go to state 46
    enum_specifier             go to state 31
    struct_or_union_specifier  go to state 33
    struct_or_union            go to state 34


State 26

   39 declaration: declaration_specifiers . ';'
   40            | declaration_specifiers . init_declarator_list ';'
   47 function_definition: declaration_specifiers . declarator compound_statement

    IDENTIFIER  shift, and go to state 1
    '('         shift, and go to state 19
    ';'         shift, and go to state 47
    '*'         shift, and go to state 20

    direct_declarator     go to state 27
    declarator            go to state 48
    init_declarator       go to state 49
    pointer               go to state 32
    init_declarator_list  go to state 50


State 27

   30 direct_declarator: direct_declarator . '[' constant_expression ']'
   31                  | direct_declarator . '[' ']'
   32                  | direct_declarator . '(' parameter_type_list ')'
   33                  | direct_declarator . '(' identifier_list ')'
   34                  | direct_declarator . '(' ')'
   36 declarator: direct_declarator .

    '('  shift, and go to state 51
    '['  shift, and go to state 52

    $default  reduce using rule 36 (declarator)


State 28

   46 function_definition: declarator . compound_statement

    '{'  shift, and go to state 53

    compound_statement  go to state 54


State 29

    5 external_declaration: declaration .

    $default  reduce using rule 5 (external_declaration)


State 30

    4 external_declaration: function_definition .

    $default  reduce using rule 4 (external_declaration)


State 31

   16 type_specifier: enum_specifier .

    $default  reduce using rule 16 (type_specifier)


State 32

   35 declarator: pointer . direct_declarator

    IDENTIFIER  shift, and go to state 1
    '('         shift, and go to state 19

    direct_declarator  go to state 55


State 33

   15 type_specifier: struct_or_union_specifier .

    $default  reduce using rule 15 (type_specifier)


State 34

   72 struct_or_union_specifier: struct_or_union . IDENTIFIER '{' struct_declaration_list '}'
   73                          | struct_or_union . '{' struct_declaration_list '}'
   74                          | struct_or_union . IDENTIFIER

    IDENTIFIER  shift, and go to state 56
    '{'         shift, and go to state 57


State 35

   52 enum_specifier: ENUM IDENTIFIER . '{' enumerator_list '}'
   53               | ENUM IDENTIFIER .

    '{'  shift, and go to state 58

    $default  reduce using rule 53 (enum_specifier)


State 36

   51 enum_specifier: ENUM '{' . enumerator_list '}'

    IDENTIFIER  shift, and go to state 59

    enumerator       go to state 60
    enumerator_list  go to state 61


State 37

   29 direct_declarator: '(' declarator . ')'

    ')'  shift, and go to state 62


State 38

   22 type_qualifier: CONST .

    $default  reduce using rule 22 (type_qualifier)


State 39

   23 type_qualifier: VOLATILE .

    $default  reduce using rule 23 (type_qualifier)


State 40

   97 type_qualifier_list: type_qualifier .

    $default  reduce using rule 97 (type_qualifier_list)


State 41

   58 pointer: '*' pointer .

    $default  reduce using rule 58 (pointer)


State 42

   57 pointer: '*' type_qualifier_list .
   59        | '*' type_qualifier_list . pointer
   98 type_qualifier_list: type_qualifier_list . type_qualifier

    CONST     shift, and go to state 38
    VOLATILE  shift, and go to state 39
    '*'       shift, and go to state 20

    $default  reduce using rule 57 (pointer)

    type_qualifier  go to state 63
    pointer         go to state 64


State 43

    0 $accept: ROOT $end .

    $default  accept


State 44

    3 translation_unit: translation_unit external_declaration .

    $default  reduce using rule 3 (translation_unit)


State 45

   27 declaration_specifiers: type_specifier declaration_specifiers .

    $default  reduce using rule 27 (declaration_specifiers)


State 46

   25 declaration_specifiers: storage_class_specifier declaration_specifiers .

    $default  reduce using rule 25 (declaration_specifiers)


State 47

   39 declaration: declaration_specifiers ';' .

    $default  reduce using rule 39 (declaration)


State 48

   41 init_declarator: declarator .
   42                | declarator . '=' initializer
   47 function_definition: declaration_specifiers declarator . compound_statement

    '='  shift, and go to state 65
    '{'  shift, and go to state 53

    $default  reduce using rule 41 (init_declarator)

    compound_statement  go to state 66


State 49

   89 init_declarator_list: init_declarator .

    $default  reduce using rule 89 (init_declarator_list)


State 50

   40 declaration: declaration_specifiers init_declarator_list . ';'
   90 init_declarator_list: init_declarator_list . ',' init_declarator

    ';'  shift, and go to state 67
    ','  shift, and go to state 68


State 51

   32 direct_declarator: direct_declarator '(' . parameter_type_list ')'
   33                  | direct_declarator '(' . identifier_list ')'
   34                  | direct_declarator '(' . ')'

    IDENTIFIER  shift, and go to state 69
    TYPEDEF     shift, and go to state 2
    EXTERN      shift, and go to state 3
    STATIC      shift, and go to state 4
    AUTO        shift, and go to state 5
    REGISTER    shift, and go to state 6
    CHAR        shift, and go to state 7
    SHORT       shift, and go to state 8
    INT         shift, and go to state 9
    LONG        shift, and go to state 10
    SIGNED      shift, and go to state 11
    UNSIGNED    shift, and go to state 12
    FLOAT       shift, and go to state 13
    DOUBLE      shift, and go to state 14
    VOID        shift, and go to state 15
    STRUCT      shift, and go to state 16
    UNION       shift, and go to state 17
    ENUM        shift, and go to state 18
    ')'         shift, and go to state 70

    type_specifier             go to state 24
    storage_class_specifier    go to state 25
    declaration_specifiers     go to state 71
    parameter_declaration      go to state 72
    enum_specifier             go to state 31
    struct_or_union_specifier  go to state 33
    struct_or_union            go to state 34
    identifier_list            go to state 73
    parameter_type_list        go to state 74
    parameter_list             go to state 75


State 52

   30 direct_declarator: direct_declarator '[' . constant_expression ']'
   31                  | direct_declarator '[' . ']'

    CONSTANT_INT    shift, and go to state 76
    CONSTANT_FLOAT  shift, and go to state 77
    IDENTIFIER      shift, and go to state 78
    STRING_LITERAL  shift, and go to state 79
    SIZEOF          shift, and go to state 80
    INC_OP          shift, and go to state 81
    DEC_OP          shift, and go to state 82
    '('             shift, and go to state 83
    ']'             shift, and go to state 84
    '*'             shift, and go to state 85
    '&'             shift, and go to state 86
    '+'             shift, and go to state 87
    '-'             shift, and go to state 88
    '~'             shift, and go to state 89
    '!'             shift, and go to state 90

    primary_expression         go to state 91
    postfix_expression         go to state 92
    unary_expression           go to state 93
    cast_expression            go to state 94
    multiplicative_expression  go to state 95
    additive_expression        go to state 96
    shift_expression           go to state 97
    relational_expression      go to state 98
    equality_expression        go to state 99
    and_expression             go to state 100
    exclusive_or_expression    go to state 101
    inclusive_or_expression    go to state 102
    logical_and_expression     go to state 103
    logical_or_expression      go to state 104
    conditional_expression     go to state 105
    constant_expression        go to state 106


State 53

  132 compound_statement: '{' . '}'
  133                   | '{' . declaration_or_statement_list '}'

    CONSTANT_INT    shift, and go to state 76
    CONSTANT_FLOAT  shift, and go to state 77
    IDENTIFIER      shift, and go to state 107
    STRING_LITERAL  shift, and go to state 79
    SIZEOF          shift, and go to state 80
    INC_OP          shift, and go to state 81
    DEC_OP          shift, and go to state 82
    TYPEDEF         shift, and go to state 2
    EXTERN          shift, and go to state 3
    STATIC          shift, and go to state 4
    AUTO            shift, and go to state 5
    REGISTER        shift, and go to state 6
    CHAR            shift, and go to state 7
    SHORT           shift, and go to state 8
    INT             shift, and go to state 9
    LONG            shift, and go to state 10
    SIGNED          shift, and go to state 11
    UNSIGNED        shift, and go to state 12
    FLOAT           shift, and go to state 13
    DOUBLE          shift, and go to state 14
    VOID            shift, and go to state 15
    STRUCT          shift, and go to state 16
    UNION           shift, and go to state 17
    ENUM            shift, and go to state 18
    CASE            shift, and go to state 108
    DEFAULT         shift, and go to state 109
    IF              shift, and go to state 110
    SWITCH          shift, and go to state 111
    WHILE           shift, and go to state 112
    DO              shift, and go to state 113
    FOR             shift, and go to state 114
    GOTO            shift, and go to state 115
    CONTINUE        shift, and go to state 116
    BREAK           shift, and go to state 117
    RETURN          shift, and go to state 118
    '('             shift, and go to state 83
    ';'             shift, and go to state 119
    '{'             shift, and go to state 53
    '}'             shift, and go to state 120
    '*'             shift, and go to state 85
    '&'             shift, and go to state 86
    '+'             shift, and go to state 87
    '-'             shift, and go to state 88
    '~'             shift, and go to state 89
    '!'             shift, and go to state 90
